--- a/engine/pre-alpha/07/index.html
+++ b/engine/pre-alpha/07/index.html
@@ -1132,12 +1132,13 @@
 			};
 
 			SystemManager.prototype.update = function(dt, entities){
-			//	SystemManager.keyboard.update();
 
 			//	Define updating systems order.
 				JoystickControllerStateSystem(null, entities);
 				UserControllableObjectRotation(entities);
-				UserControllableObjectPosition(entities);
+				WorldControllableObjectPosition(entities); // important!
+				EditorControllableObjectPosition(dt, entities);
+				EditorControllableObjectRotation(dt, entities);
 			};
 
 			SystemManager.prototype.render = function(dt, entities){};
@@ -1314,8 +1315,8 @@
 
 					var dt = clock.getDelta();
 					var elapsed = clock.getElapsedTime();
-					system_manager.update(dt, entities);
 					requestFrameId = requestAnimationFrame( runtime );
+					system_manager.update(dt, entities);
 
 				})();
 			
@@ -1632,13 +1633,12 @@
 					entity.Direction === undefined, // false,
 					entity.Controller === undefined, // false,
 				//	false: all except (true && true).
-					entity.Object3D === undefined 
-					&& entity.Group === undefined, 
+				//	entity.Object3D === undefined 
+				//	&& entity.Group === undefined, 
 				];
 
-			//	all items must be false:(!undefined) to pass test.
 			//	debugMode && console.log( components ); 
-
+			//	all items must be false:(!undefined) to pass test.
 			//	if ( a component is undefined:true ) return false.
 				while ( components.length ){
 					if ( components.shift() ) return false;
@@ -1652,12 +1652,8 @@
 		//	Tip: By holding the "X" "Y" or "Z" key the system should be use to update the object3d component x,y,z rotation respectively. (TODO)
 
 			function isUserControllable(entity){
-			//	true: true && !(true && false), 
-			//		  true && !(false && false), 
-			//	false: all others.
-				return isControllable(entity) 
-					&& !(entity.KeyInputControl === undefined 
-					&& entity.VirtualJoystick === undefined);
+			//	returns true: true && !(true && false), true && !(false && false), returns false: all others.
+				return isControllable(entity) && !(entity.KeyInputControl === undefined && entity.VirtualJoystick === undefined);
 			}
 
 			function UserControllableObjectRotation(entities){
@@ -1681,8 +1677,11 @@
 				}
 
 				function update( entity ){
-					entity.Rotation.y = entity.Direction = 
-					entity.Controller.direction + Math.PI; // important!
+					try {
+						entity.Rotation.y = entity.Direction = entity.Controller.direction + Math.PI; // important!
+					} catch(err){
+						debugMode && console.error(err);
+					}
 				}
 			}
 
@@ -1714,6 +1713,7 @@
 					var material = new THREE.LineBasicMaterial( { color: 0xffff00 } );
 					var component = new THREE.LineSegments( geometry, material );
 					component.isComponent = true;
+					component.position.y = radius
 					component.name = "controllable helper";
 				//	Add helper to scene.
 					entity.Object3D.add( component );
@@ -1799,7 +1799,24 @@
 		//	Group + Position + Rotation + Direction + Controller + (KeyInputControl and/or VirtualJoystick) => UserControllableObjectPosition()
 		//	Tip: By holding the "X" "Y" or "Z" key the system should be use to update the component x,y,z position respectively.(TODO)
 
-			function UserControllableObjectPosition(entities){
+			function isWorldControllable(entity){
+			//	All items must be "false" to pass test.
+
+				var components = [
+					entity.Controller === undefined,
+					!(entity.Controller instanceof MW.CharacterController),
+				];
+			//	all items must be false:(!undefined) to pass test.
+			//	debugMode && console.log( components ); 
+			//	if ( a component is undefined:true ) return false.
+				while ( components.length ){
+					if ( components.shift() ) return false;
+				}
+
+				return true;
+			}
+
+			function WorldControllableObjectPosition(entities){
 
 				var system = arguments.callee.name;
 				var collected = [], collectId = [];
@@ -1807,7 +1824,7 @@
 			//	Collect entities.
 				for (var i = 0; i < entities.length; i++){
 
-					if ( isUserControllable( entities[i] ) ) {
+					if ( isWorldControllable(entities[i]) ) {
 						collected.push( entities[i] );
 						collectId.push( entities[i]._id);
 					}
@@ -1821,7 +1838,11 @@
 				}
 
 				function update( entity ){
-					entity.Position.y = entity.Controller.center.y - entity.Controller.radius;
+					try {
+						entity.Position.y = entity.Controller.center.y - entity.Controller.radius;
+					} catch(err){
+						debugMode && console.log(err);
+					}
 				}
 			}
 
@@ -1941,9 +1962,11 @@
 		//	EditorControllableObject entity type defines editor controllable object.
 		//
 		//	An EditorControllableObject-type entity must have:
+		//		a State component,
 		//		a Scale component,
 		//		a Position component,
 		//		a Rotation component,
+		//		a Selected component,
 		//		a Object3d or Group or Mesh or Line or Sprite component,
 		//
 		//	An EditorControllableObject-type entity must NOT have:
@@ -1953,10 +1976,10 @@
 			//	All items must be "false" to pass test.
 
 				var components = [
+					entity.State === undefined, // false,
 					entity.Scale === undefined, // false,
 					entity.Position === undefined, // false,
 					entity.Rotation === undefined, // false,
-					entity.Controller === undefined, // false,
 				//	false: all except (true && true && true).
 					entity.Mesh === undefined 
 					&& entity.Line === undefined
@@ -1977,6 +2000,192 @@
 
 				return true;
 			}
+
+			const axisX = new THREE.Vector3(1,0,0);
+			const axisY = new THREE.Vector3(0,1,0);
+			const axisZ = new THREE.Vector3(0,0,1);
+			const keyboard = SystemManager.keyboard;
+
+			function EditorControllableObjectScale(dt, entities){}
+			function EditorControllableObjectRotation(dt, entities){
+
+				var system = arguments.callee.name;
+				var collected = [], collectId = [];
+
+				for (var i = 0; i < entities.length; i++){
+					var entity = entities[i];
+					
+					if ( isEditorControllable( entity ) 
+					&& entity.State !== undefined 
+					&& entity.State.editorMode 
+					&& entity.State.isSelected
+					&& entity.State.isRotating ) {
+						collected.push( entity );
+						collectId.push( entity._id);
+					}
+				}
+
+				if ( !collected.length ) return;
+			//	debugMode && console.log( syslogcid( system, collectId ) );
+
+				while ( collected.length ){
+					update( collected.shift() );
+				}
+
+				function update( entity ){
+
+					var object;
+
+					if ( entity.Object3D ) object = entity.Object3D;
+					else if ( entity.Group ) object = entity.Group;
+					else if ( entity.Mesh )  object = entity.Mesh;
+					else if ( entity.Line )  object = entity.Line;
+					else if ( entity.Sprite ) object = entity.Sprite;
+					else if ( entity.SkinnedMesh )  object = entity.SkinnedMesh;
+					else if ( entity.LineSegments ) object = entity.LineSegments;
+
+				//	if ( !object ) throw "SystemError:", system, "update()";
+
+					try {
+
+					//	rotate left/right/up/down (local coordinates)
+						var rad = Math.max(dt, 0.02);
+						if ( keyboard.pressed("A") || keyboard.pressed("left") )  object.rotateOnAxis( axisY,  rad);
+						if ( keyboard.pressed("D") || keyboard.pressed("right") ) object.rotateOnAxis( axisY, -rad);
+						if ( keyboard.pressed("W") || keyboard.pressed("up") )    object.rotateOnAxis( axisX,  rad);
+						if ( keyboard.pressed("S") || keyboard.pressed("down") )  object.rotateOnAxis( axisX, -rad);
+						if ( keyboard.pressed("Z") ) object.rotation.set(0,0,0);
+
+					} catch(err){
+						debugMode && console.error( "SystemError:", system, err );
+					};
+
+				//	entity.Rotation.y = entity.Direction = entity.Controller.direction + Math.PI; // important!
+				}
+
+			}
+
+			function EditorControllableObjectPosition(dt, entities){
+
+				var system = arguments.callee.name;
+				var collected = [], collectId = [];
+
+				for (var i = 0; i < entities.length; i++){
+					var entity = entities[i];
+					
+					if ( isEditorControllable( entity ) 
+					&& entity.State !== undefined 
+					&& entity.State.editorMode 
+					&& entity.State.isSelected
+					&& entity.State.isPositioning ) {
+						collected.push( entity );
+						collectId.push( entity._id);
+					}
+				}
+
+				if ( !collected.length ) return;
+			//	debugMode && console.log( syslogcid( system, collectId ) );
+
+				while ( collected.length ){
+					update( collected.shift() );
+				}
+
+				function update( entity ){
+
+					var object;
+
+					if ( entity.Object3D ) object = entity.Object3D;
+					else if ( entity.Group ) object = entity.Group;
+					else if ( entity.Mesh )  object = entity.Mesh;
+					else if ( entity.Line )  object = entity.Line;
+					else if ( entity.Sprite ) object = entity.Sprite;
+					else if ( entity.SkinnedMesh )  object = entity.SkinnedMesh;
+					else if ( entity.LineSegments ) object = entity.LineSegments;
+
+					try {
+
+						var dist = Math.max(dt, 0.05);
+
+					//	move up/down/left/right/forward/backward (local coordinates)
+						if ( keyboard.pressed("E") )                              object.translateOnAxis( axisY,  dist ); // up,
+						if ( keyboard.pressed("Q") )                              object.translateOnAxis( axisY, -dist ); // down,
+						if ( keyboard.pressed("A") || keyboard.pressed("left") )  object.translateOnAxis( axisX, -dist ); // left,
+						if ( keyboard.pressed("D") || keyboard.pressed("right") ) object.translateOnAxis( axisX,  dist ); // right,
+						if ( keyboard.pressed("W") || keyboard.pressed("up") )    object.translateOnAxis( axisZ, -dist ); // forward,
+						if ( keyboard.pressed("S") || keyboard.pressed("down") )  object.translateOnAxis( axisZ,  dist ); // backward,
+
+					//	move up/down/left/right/forward/backward (local coordinates)
+					//	if ( keyboard.pressed("E") )                              object.translateY(  dist ); // up,
+					//	if ( keyboard.pressed("Q") )                              object.translateY( -dist ); // down,
+					//	if ( keyboard.pressed("A") || keyboard.pressed("left") )  object.translateX( -dist ); // left,
+					//	if ( keyboard.pressed("D") || keyboard.pressed("right") ) object.translateX(  dist ); // right,
+					//	if ( keyboard.pressed("W") || keyboard.pressed("up") )    object.translateZ( -dist ); // forward,
+					//	if ( keyboard.pressed("S") || keyboard.pressed("down") )  object.translateZ(  dist ); // backward,
+
+					//	move up/down/left/right/forward/backward (global coordinates)
+					//	if ( keyboard.pressed("E") )                              object.position.y += dist; // up,
+					//	if ( keyboard.pressed("Q") )                              object.position.y -= dist; // down,
+					//	if ( keyboard.pressed("A") || keyboard.pressed("left") )  object.position.x -= dist; // left,
+					//	if ( keyboard.pressed("D") || keyboard.pressed("right") ) object.position.x += dist; // right,
+					//	if ( keyboard.pressed("W") || keyboard.pressed("up") )    object.position.z	-= dist; // forward,
+					//	if ( keyboard.pressed("S") || keyboard.pressed("down") )  object.position.z	+= dist; // backward,
+
+					} catch(err){
+						debugMode && console.error( "SystemError:", system, err );
+					};
+
+				}
+
+			}
+
+		//	Example: editorableObject is an entity instance.
+
+			var editorableObject = (function(){
+
+				var r = 0.5; // radius.
+				var entity = new Entity(); // entity instance.
+
+			//	editorable object must have a object3d component.
+				var object = (function(){
+					var geometry = new THREE.BoxGeometry(1,1,1,1,1,1 );
+					var material = new THREE.MeshStandardMaterial();
+					var component = new THREE.Mesh(geometry, material);
+					component.isComponent = true;
+					component.position.set( -2.5, 0.5, -2.5 );
+					component.name = "editor controllable object";
+				//	Add object to scene.
+					scene.add( component );
+					return component;
+				})();
+
+			//	Add component to entity
+				entity.Object3D = object;
+
+			//	Add components to make entity editor controllable.
+				entity.Scale = object.scale;
+				entity.Position = object.position;
+				entity.Rotation = object.rotation;
+
+				entity.State = {
+					editorMode:true,
+					isSelected:true,
+					isRotating:false,
+					isPositioning:true
+				};
+
+			//	Push entity to entities queue.
+				entities.push( entity ); // important!
+				debugMode && console.log( entity );
+
+				return entity;
+
+			})();
+
+		//	Take camera controls.
+			setTimeout(function(){
+				cameraControls.offset.y = 0;
+				cameraControls.trackObject = editorableObject.Object3D
+			}, 3000);
 
 		</script>
 
